ja-source/docusaurus-plugin-content-docs/version-2.1/sql-manual/sql-functions/scalar-functions/encrypt-digest-functions/murmur-hash3-64.md
---
{
  "title": "MURMUR_HASH3_64",
  "language": "ja",
  "description": "64ビットmurmur3ハッシュ値を計算する"
}
---
## 説明

64ビットmurmur3ハッシュ値を計算する

-注意: テスト後、`xxhash_64`のパフォーマンスは`murmur_hash3_64`の約2倍であることが判明しているため、ハッシュ値を計算する際は、`murmur_hash3_64`の代わりに`xxhash_64`を使用することを推奨します。


## 構文

```sql
MURMUR_HASH3_64( <str> [ , <str> ... ] )
```
## パラメータ

| parameter      | description                                             |
|---------|------------------------------------------------|
| `<str>` | 計算される64ビットmurmur3ハッシュ値 |

## 戻り値

入力文字列の64ビットmurmur3ハッシュを返します。



## 例

```sql
select murmur_hash3_64(null), murmur_hash3_64("hello"), murmur_hash3_64("hello", "world");
```
```text
+-----------------------+--------------------------+-----------------------------------+
| murmur_hash3_64(NULL) | murmur_hash3_64('hello') | murmur_hash3_64('hello', 'world') |
+-----------------------+--------------------------+-----------------------------------+
|                  NULL |     -3215607508166160593 |               3583109472027628045 |
+-----------------------+--------------------------+-----------------------------------+
```
