ja-source/docusaurus-plugin-content-docs/version-3.x/sql-manual/sql-functions/scalar-functions/encrypt-digest-functions/murmur-hash3-64.md
---
{
  "title": "MURMUR_HASH3_64",
  "description": "64ビットmurmur3ハッシュ値を計算する",
  "language": "ja"
}
---
## 説明

64ビットmurmur3ハッシュ値を計算します

`MURMUR_HASH3_64_V2`との違いは以下の通りです：このバージョンは64ビット出力に特化して最適化されており、v2バージョンよりもわずかに優れたパフォーマンスを持ちますが、[標準ライブラリ](https://mmh3.readthedocs.io/en/latest/api.html#mmh3.hash64)の実装とは一致しません。

-注意：テストの結果、`xxhash_64`のパフォーマンスは`murmur_hash3_64`の約2倍であるため、ハッシュ値を計算する際は`murmur_hash3_64`の代わりに`xxhash_64`を使用することを推奨します。

## 構文

```sql
MURMUR_HASH3_64( <str> [ , <str> ... ] )
```
## パラメータ

| parameter      | description                                             |
|---------|------------------------------------------------|
| `<str>` | 計算される64ビットmurmur3ハッシュ値 |

## 戻り値

入力文字列の64ビットmurmur3ハッシュを返します。

いずれかのパラメータ入力がNULLの場合、NULLを返します。

## 例

```sql
select murmur_hash3_64(null), murmur_hash3_64("hello"), murmur_hash3_64("hello", "world");
```
```text
+-----------------------+--------------------------+-----------------------------------+
| murmur_hash3_64(NULL) | murmur_hash3_64('hello') | murmur_hash3_64('hello', 'world') |
+-----------------------+--------------------------+-----------------------------------+
|                  NULL |     -3215607508166160593 |               3583109472027628045 |
+-----------------------+--------------------------+-----------------------------------+
```
